FIX: Aggregations in grid headers were not aligned to the right (#166)

--- a/src/gui/Components/ScreenElements/Table/Header.module.scss
+++ b/src/gui/Components/ScreenElements/Table/Header.module.scss
@@ -124,3 +124,12 @@ along with ORIGAM. If not, see <http://www.gnu.org/licenses/>.
   width: 100%;
   min-height: 25px;
 }
+
+.additionalContentsRow {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  width: 100%;
+  min-height: 25px;
+  padding-right: 8px;
+}
